[package]
name = "mavlink_parser_vest"
version = "0.1.0"
edition = "2024"

[dependencies]
verus_builtin = {workspace = true}
verus_builtin_macros = {workspace = true}
vstd = {workspace = true}
# vest = { git = "https://github.com/secure-foundations/vest.git" }
vest = {workspace = true}

[package.metadata.verus]
verify = true
